Colocou display inline-block nas listas de premios

--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-4-css-semantica/style.css
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-4-css-semantica/style.css
@@ -39,5 +39,17 @@
         text-align: center;
         width: 300px;
       }
-     
+     .main1 {
+        display: inline-block;
+     }
+     .premios {
+    
+        margin-top: 20%;
+       text-align: center;
+     }
+     .section2 li {
+        display:inline-block;
+        
+        
+     }
    
