--- a/Fundamentos/bloco-03-introducao-a-html-e-css/dia-4-css-semantica/style.css
+++ b/Fundamentos/bloco-03-introducao-a-html-e-css/dia-4-css-semantica/style.css
@@ -18,7 +18,6 @@
         text-align: center;
         width: 200px;
         margin-left: 40%;
-        margin-right: 80%;
         margin-top: 3%;
       }
 
@@ -44,12 +43,12 @@
      }
      .premios {
     
-        margin-top: 20%;
+        margin-top:20px;
+        margin-left: 320px;
        text-align: center;
      }
      .section2 li {
         display:inline-block;
-        
         
      }
    
